# weather-prediction-ml-pipeline

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.devcontainer/.devcontainer/: Dockerfile
.github/workflows/: auto-tag.yml  ci.yml  release.yml
src/: __init__.py  data_ingest.py  model.py  train.py  utils.py
tests/: test_data_ingest.py  test_model.py  test_utils.py
