[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-prediction-ml-pipeline"
version = "0.1.0"
description = "Machine learning pipeline for weather prediction with data ingestion and model training"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
authors = [{name = "Shariyar", email = "shariyar@example.com"}]
dependencies = [
    "pandas>=3.0,<4.0",
    "scikit-learn>=1.8,<2.0",
    "requests>=2.32.5,<3.0",
    "python-dotenv>=1.2.1,<2.0",
    "joblib>=1.5.3,<2.0",
    "tqdm>=4.67.1,<5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "ruff>=0.14.14,<1.0.0",
    "build>=1.0.0,<2.0.0"
]

[project.scripts]
weather-data-ingest = "src.data_ingest:main"
weather-train = "src.train:main"
